manifests/gateway-api/httproute-prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: observability
  annotations:
    argocd.argoproj.io/sync-wave: "6"
spec:
  parentRefs:
    - { name: observability-gateway, namespace: observability }
  hostnames:
    - "prometheus.monitoring.relsayed.online"
  rules:
    - matches:
        - path: { type: PathPrefix, value: / }
      backendRefs:
        - { name: prometheus-operated, port: 9090 }
