manifests/gateway-api/httproute-tempo.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tempo
  namespace: observability
  annotations:
    argocd.argoproj.io/sync-wave: "6"
spec:
  parentRefs:
    - { name: observability-gateway, namespace: observability }
  hostnames:
    - "tempo.monitoring.relsayed.online"
  rules:
    - matches:
        - path: { type: PathPrefix, value: / }
      backendRefs:
        - { name: tempo, port: 4318 }
