manifests/gateway-api/httproute-thanos.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: thanos
  namespace: observability
  annotations:
    argocd.argoproj.io/sync-wave: "6"
spec:
  parentRefs:
    - { name: observability-gateway, namespace: observability}
  hostnames:
    - "thanos.monitoring.example.com"
  rules:
    - matches:
        - path: { type: PathPrefix, value: / }
      backendRefs:
        - { name: thanos-query, port: 9090 }
